// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`my test suite works 1`] = `
<canvas
  data-snapshot-image="8a5185e59abea40cafc5fee7dd4ce43d13e3605a12db3545884953721c21a5b53cb2f30e0f5239756af97b799bedbfca191a02ed9edd9b534952d7c0c950d77b"
  height="200"
  width="200"
/>
`;

exports[`my test suite works for canvas wrapped by other elements 1`] = `
<div>
  <canvas
  data-snapshot-image="8ca44bb3ce94db4977b7ed7b15b9797bed6febb7a206ea18742453b7f56b20820ea78f18d2f141e542e266678e3c3f11e87ee065353f9985ea3759de5a554e6b"
  height="200"
  width="200"
/>
</div>
`;
